intear-dex-management/tests/snapshots/xyk_writes__fees_withdraw_to_balance.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"fees\", \"withdraw\", \"alice.near\", \"all\", \"to-balance\"]).await"
---
$ near-intear-dex-management xyk fees withdraw alice.near all to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Move the fees alice.near collected on slimedragon.near/xyk into its balance on dex.intear.near: 0.0005 NEAR, 0.0005 USDt
│  Actions: execute_operations (1 yoctoNEAR, 60 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "DexCall": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "method": "withdraw_fees",
│                                             "args": "AgAAAAABFgAAAHVzZHQudGV0aGVyLXRva2VuLm5lYXI=",
│                                             "attached_assets": {}
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          60.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150661465698645329550560244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"4338534301354670449439756"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"nep141:usdt.tether-token.near","balance":"1298038029"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"252461971"}}
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Withdrew fees from slimedragon.near/xyk to alice.near's balance on dex.intear.near: 0.0005 NEAR, 0.0005 USDt
│  alice.near now has 4.338534301354670449439756 NEAR on dex.intear.near
│  alice.near now has 252.461971 USDt on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk fees withdraw alice.near all to-balance network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
