intear-dex-management/tests/snapshots/xyk_writes__fees_withdraw_to_wallet.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"carol.near\",\n&[\"xyk\", \"fees\", \"withdraw\", \"carol.near\", \"near\", \"to-wallet\"]).await"
---
$ near-intear-dex-management xyk fees withdraw carol.near near to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer carol.near · dex.intear.near
│  Move the fees carol.near collected on slimedragon.near/xyk into its balance on dex.intear.near: 0.0005 NEAR
│  Withdraw them from there to carol.near's wallet
│  Actions: execute_operations (1 yoctoNEAR, 80 Tgas)
├  Unsigned transaction:
│    signer_id:    carol.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "DexCall": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "method": "withdraw_fees",
│                                             "args": "AQAAAAA=",
│                                             "attached_assets": {}
│                                           }
│                                         },
│                                         {
│                                           "Withdraw": {
│                                             "asset_id": "near",
│                                             "amount": {
│                                               "Exact": "500000000000000000000"
│                                             },
│                                             "to": null,
│                                             "rescue_address": null
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          80.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150660965698645329550560244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"500000000000000000000"}}
│      Executing operation 1
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"carol.near","asset_id":"near","balance":"0"}}
│    Logs [carol.near]:   No logs
│    Logs [carol.near]:   No logs
│    Logs [dex.intear.near]:
│      After withdraw: Ok(())
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"withdraw","data":{"from":{"Account":"carol.near"},"to":"carol.near","asset_id":"near","amount":"500000000000000000000"}}
│    Logs [carol.near]:   No logs
│    Logs [carol.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <carol.near> succeeded.

├  ✓ Withdrew fees from slimedragon.near/xyk to carol.near's wallet: 0.0005 NEAR
│  carol.near now has 0 NEAR on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk fees withdraw carol.near near to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2zF4Msijmc39gdTqTfG7pxt7SSH6MW3nX9muBLz36JF4r5xWWvxCSeAXJdWTiuy6f2MeDLTh4NDEQJVzhemXLcf5 send
