intear-dex-management/tests/snapshots/xyk_writes__fees_withdraw_when_nothing_is_pending.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"fees\", \"withdraw\", \"alice.near\", \"all\", \"to-wallet\"]).await"
---
$ near-intear-dex-management xyk fees withdraw alice.near all to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk fees withdraw alice.near all to-wallet network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: alice.near has no fees to withdraw in any pool asset on slimedragon.near/xyk
