intear-dex-management/tests/snapshots/xyk_writes__liquidity_add_to_pool_of_another_owner.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"liquidity\", \"add\", \"alice.near\", \"0\", \"1 NEAR\", \"3 USDt\",\n\"max-slippage\", \"1%\"]).await"
---
$ near-intear-dex-management xyk liquidity add alice.near 0 '1 NEAR' '3 USDt' max-slippage '1%' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk liquidity add alice.near 0 '1 NEAR' '3 USDt' max-slippage '1%' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: Pool #0 of slimedragon.near/xyk is owned by slimedragon.near, and alice.near signed

Suggestion: Sign with slimedragon.near
