intear-dex-management/tests/snapshots/xyk_writes__liquidity_add_to_public_pool_with_registration.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "xyk_transaction_paying_storage(&sandbox, &cli, \"alice.near\", XYK_DEX_ID,\n&[\"xyk\", \"liquidity\", \"add\", \"alice.near\", \"2\", \"0.01 NEAR\", \"200 INTEL\",\n\"max-slippage\", \"1%\"]).await"
---
$ near-intear-dex-management xyk liquidity add alice.near 2 '0.01 NEAR' '200 INTEL' max-slippage '1%' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Register alice.near in pool #2 (NEAR / INTEL) of slimedragon.near/xyk, attaching 0.00096 NEAR from its wallet for the storage that takes; slimedragon.near/xyk sends back what it doesn't use
│  Add up to 0.01 NEAR and 200 INTEL to pool #2 (NEAR / INTEL) of slimedragon.near/xyk for at least 197999999999999 shares, 199999999999999 at the current ratio; what doesn't fit the ratio goes back to alice.near's wallet
│  Actions: execute_operations (0.00096 NEAR, 100 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "DexCall": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "method": "register_liquidity",
│                                             "args": "AgAAAA==",
│                                             "attached_assets": {
│                                               "near": "960000000000000000000"
│                                             }
│                                           }
│                                         },
│                                         {
│                                           "DexCall": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "method": "add_liquidity",
│                                             "args": "AgAAAAH/X6p3FLQAAAAAAAAAAAAA",
│                                             "attached_assets": {
│                                               "near": "10000000000000000000000",
│                                               "nep141:intel.tkn.near": "200000000000000000000"
│                                             }
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          100.0 Tgas
│                       deposit:      0.00096 NEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"4239494301354670449439756"}}
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"4238534301354670449439756"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150761925698645329550560244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150760965698645329550560244"}}
│      Executing operation 1
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"liquidity_added","data":{"pool_id":2,"asset_0":"near","asset_1":"nep141:intel.tkn.near","added_amount_0":"9999999999999950000001","added_amount_1":"199999999999999000001","minted_shares":"199999999999999","new_owned_asset_0":"9999999999999950000000","new_owned_asset_1":"199999999999999000000","new_owned_shares":"199999999999999","new_total_asset_0":"50009999999999999950000001","new_total_asset_1":"1000199999999999999000001","new_total_shares":"1000199999999999999"}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":2,"pool":{"Public":{"assets":[{"asset_id":"near","balance":"50009999999999999950000001"},{"asset_id":"nep141:intel.tkn.near","balance":"1000199999999999999000001"}],"fees":{"receivers":[["Pool",3000],[{"Account":"plach.intear.near"},1000]]},"fee_configuration":{"receivers":[["Pool",{"Fixed":3000}]]},"total_shares":"1000199999999999999"}}}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"4228534301354670449439756"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150770965698645329550560244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:intel.tkn.near","balance":"1800000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"nep141:intel.tkn.near","balance":"8003200000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150770965698645329500560245"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"nep141:intel.tkn.near","balance":"8003199999999999999000001"}}
│    Logs [alice.near]:   No logs
│    Logs [alice.near]:   No logs
│    Logs [dex.intear.near]:
│      After withdraw: Ok(())
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"withdraw","data":{"from":{"Dex":"slimedragon.near/xyk"},"to":"alice.near","asset_id":"near","amount":"49999999"}}
│    Logs [alice.near]:   No logs
│    Logs [intel.tkn.near]:
│      EVENT_JSON:{"standard":"nep141","version":"1.0.0","event":"ft_transfer","data":[{"old_owner_id":"dex.intear.near","new_owner_id":"alice.near","amount":"999999"}]}
│    Logs [alice.near]:   No logs
│    Logs [dex.intear.near]:
│      After withdraw: Ok(())
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"withdraw","data":{"from":{"Dex":"slimedragon.near/xyk"},"to":"alice.near","asset_id":"nep141:intel.tkn.near","amount":"999999"}}
│    Logs [alice.near]:   No logs
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Added liquidity to pool #2 (NEAR / INTEL) of slimedragon.near/xyk
│  Added 0.009999999999999950000001 NEAR and 199.999999999999000001 INTEL to pool #2 of slimedragon.near/xyk for 199999999999999 shares, 0.0199% of the pool
│  Pool #2 of slimedragon.near/xyk now holds 50.009999999999999950000001 NEAR and 1,000,199.999999999999000001 INTEL
│  slimedragon.near/xyk sent 0.000000000000000049999999 NEAR to alice.near's wallet
│  slimedragon.near/xyk sent 0.000000000000999999 INTEL to alice.near's wallet
│  alice.near now has 4.228534301354670449439756 NEAR on dex.intear.near
│  alice.near now has 1,800 INTEL on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk liquidity add alice.near 2 '0.01 NEAR' '200 INTEL' max-slippage '1%' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
