intear-dex-management/tests/snapshots/xyk_writes__liquidity_remove_from_locked_pool.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"xyk\", \"liquidity\", \"remove\", \"slimedragon.near\", \"1\", \"50%\",\n\"max-slippage\", \"1%\"]).await"
---
$ near-intear-dex-management xyk liquidity remove slimedragon.near 1 '50%' max-slippage '1%' network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk liquidity remove slimedragon.near 1 '50%' max-slippage '1%' network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send

Error:
   0: Pool #1 of slimedragon.near/xyk is locked, so its fees and liquidity can't change
